--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Platform for cryptocurrency enthusiasts"
     />
+    <meta
+    name="image"
+    property="og:image"
+    content="https://user-images.githubusercontent.com/77038610/151707021-db850c09-c5b7-46d1-bc2f-8d8ce1922624.jpg"
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>
+      Cruptocurrency dashboard
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
