--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>
-      Cruptocurrency dashboard
+      Cryptocurrency dashboard
     </title>
   </head>
   <body>
